Add keras_tuner to enviroment

--- a/enviroment.yml
+++ b/enviroment.yml
@@ -3,8 +3,12 @@ channels:
   - defaults
   - conda-forge
 dependencies:
+  - pip
   - numpy
   - matplotlib
   - scikit-learn
   - tensorflow
   - scikit-image
+  - pip:
+    - keras-tuner
+    
